--- a/.spikes/percolate-rocks/Cargo.toml
+++ b/.spikes/percolate-rocks/Cargo.toml
@@ -11,16 +11,20 @@ license = "MIT"
 name = "percolate_rocks"
 crate-type = ["cdylib", "rlib"]
 
+[features]
+default = ["python"]
+python = ["pyo3", "pyo3-asyncio"]
+
 [dependencies]
-# Python bindings
-pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }
+# Python bindings (optional)
+pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"], optional = true }
+pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"], optional = true }
 
 # Storage
 rocksdb = { version = "0.22", features = ["multi-threaded-cf"] }
 
 # Async runtime
 tokio = { version = "1", features = ["full"] }
-pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
 async-trait = "0.1"
 
 # Serialization
@@ -35,6 +39,9 @@ anyhow = "1"
 # UUID and hashing
 uuid = { version = "1", features = ["v4", "serde"] }
 blake3 = "1"
+
+# Date/time
+chrono = { version = "0.4", features = ["serde"] }
 
 # Vector search
 # Reference impl uses hnswlib (Python bindings)
