feat: add comprehensive CLI with CRUD operations
Add rem CLI binary with complete command structure:

Implemented commands:
- rem init: Initialize database with RocksDB column families
- rem insert: Insert entities with JSON data
- rem get: Retrieve entities by UUID
- rem schema templates: List built-in schema templates

Stubbed commands (ready for implementation):
- Schema management (add, list, show)
- Data operations (ingest, batch insert)
- Search & queries (semantic search, SQL, NL queries)
- Graph traversal
- Export (Parquet, CSV, JSONL)
- Replication (serve, replicate, status)

CLI features:
- Clap-based argument parsing
- Environment variable support (P8_DB_PATH)
- Path expansion (~/.p8/db support)
- Pretty JSON output
- Error handling with anyhow

Manual testing:
- Database initialization: ✓
- Entity insertion: ✓
- Entity retrieval: ✓
- System fields auto-generation: ✓
- Column family isolation: ✓

--- a/.spikes/percolate-rocks/Cargo.toml
+++ b/.spikes/percolate-rocks/Cargo.toml
@@ -11,6 +11,10 @@ license = "MIT"
 name = "percolate_rocks"
 crate-type = ["cdylib", "rlib"]
 
+[[bin]]
+name = "rem"
+path = "src/bin/rem.rs"
+
 [features]
 default = ["python"]
 python = ["pyo3", "pyo3-asyncio"]
@@ -66,6 +70,10 @@ prost = "0.13"
 
 # JSON Schema validation
 jsonschema = "0.18"
+
+# CLI
+clap = { version = "4", features = ["derive", "env"] }
+shellexpand = "3"
 
 # Logging
 tracing = "0.1"
