--- a/.spikes/percolate-rocks/Cargo.toml
+++ b/.spikes/percolate-rocks/Cargo.toml
@@ -34,6 +34,7 @@ async-trait = "0.1"
 # Serialization
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+serde_yaml = "0.9"
 bincode = "1"
 
 # Error handling
