--- a/.spikes/percolate-rocks/Cargo.toml
+++ b/.spikes/percolate-rocks/Cargo.toml
@@ -53,6 +53,9 @@ chrono = { version = "0.4", features = ["serde"] }
 # For Rust: instant-distance is a pure Rust HNSW implementation
 instant-distance = "0.6"
 
+# Memory-mapped I/O (for DiskANN)
+memmap2 = "0.9"
+
 # SQL parsing and execution
 sqlparser = "0.51"
 
@@ -62,13 +65,22 @@ sqlparser = "0.51"
 reqwest = { version = "0.12", features = ["json"] }  # For OpenAI API calls
 embed_anything = "0.6"  # Local embedding models (all-MiniLM-L6-v2, etc.)
 
-# Parquet export
+# Export formats
+csv = "1"  # CSV export
 parquet = { version = "53", features = ["arrow"] }
 arrow = "53"
 
 # Replication (gRPC)
 tonic = "0.12"
 prost = "0.13"
+tokio-stream = "0.1"
+
+# Cryptography (for encryption at rest)
+chacha20poly1305 = "0.10"  # AEAD cipher for entity encryption
+ed25519-dalek = { version = "2", features = ["rand_core"] }  # Signing key pairs
+x25519-dalek = "2"  # Key exchange for ECDH
+argon2 = "0.5"  # Password hashing and key derivation
+rand = "0.8"  # Random number generation
 
 # JSON Schema validation
 jsonschema = "0.18"
