--- a/.github/workflows/build-all.yml
+++ b/.github/workflows/build-all.yml
@@ -10,12 +10,19 @@ on:
       - 'percolate-reading/**'
       - '.github/workflows/build-*.yml'
 
+permissions:
+  contents: read
+  id-token: write  # Allow PyPI trusted publishing
+
 jobs:
   # Step 1: Build Python package (rocks)
   build-rocks:
     name: Build percolate-rocks
     uses: ./.github/workflows/build-rocks.yml
     secrets: inherit
+    permissions:
+      contents: read
+      id-token: write
 
   # Step 2: Build Docker images (depends on rocks)
   build-services:
