--- a/.github/workflows/build-rocks.yml
+++ b/.github/workflows/build-rocks.yml
@@ -70,6 +70,12 @@ jobs:
         with:
           python-version: '3.11'
 
+      - name: Install cross-compilation toolchain (ARM64 Linux)
+        if: matrix.target == 'aarch64-unknown-linux-gnu'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y gcc-aarch64-linux-gnu
+
       - name: Install Rust
         uses: actions-rs/toolchain@v1
         with:
