--- a/.github/workflows/build-rocks.yml
+++ b/.github/workflows/build-rocks.yml
@@ -74,7 +74,7 @@ jobs:
         if: matrix.target == 'aarch64-unknown-linux-gnu'
         run: |
           sudo apt-get update
-          sudo apt-get install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu
+          sudo apt-get install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu pkg-config perl
 
           # Use vendored OpenSSL (compiles from source, no system deps needed)
           echo "OPENSSL_STATIC=1" >> $GITHUB_ENV
