--- a/percolate-rocks/Cargo.toml
+++ b/percolate-rocks/Cargo.toml
@@ -2,7 +2,7 @@
 name = "percolate-rocks"
 version = "0.2.3"
 edition = "2021"
-rust-version = "1.75"
+rust-version = "1.85"
 authors = ["Percolate Team"]
 description = "High-performance embedded database for semantic search, graph queries, and structured data"
 license = "MIT"
@@ -65,7 +65,7 @@ sqlparser = "0.51"
 # Embeddings - Reference impl uses sentence-transformers (Python)
 # For Rust, we'll expose sentence-transformers via PyO3 or use OpenAI API
 # NO fastembed - not in reference implementation
-reqwest = { version = "0.12", features = ["json"] }  # For OpenAI API calls
+reqwest = { version = "0.12", features = ["json", "native-tls-vendored"] }  # For OpenAI API calls (vendored OpenSSL for cross-compilation)
 embed_anything = "0.6"  # Local embedding models (all-MiniLM-L6-v2, etc.)
 
 # Export formats
