Remove Linux ARM64 and macOS Intel from build matrix
Keep only macOS ARM64 (M1+ Silicon) and Linux AMD64 (Kubernetes).
These two platforms cover most deployment scenarios.

--- a/.github/workflows/build-rocks.yml
+++ b/.github/workflows/build-rocks.yml
@@ -52,15 +52,15 @@ jobs:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             platform: linux-amd64
-          - os: ubuntu-latest
-            target: aarch64-unknown-linux-gnu
-            platform: linux-arm64
+          # - os: ubuntu-latest
+          #   target: aarch64-unknown-linux-gnu
+          #   platform: linux-arm64
           - os: macos-latest
             target: aarch64-apple-darwin
             platform: darwin-arm64
-          - os: macos-latest
-            target: x86_64-apple-darwin
-            platform: darwin-amd64
+          # - os: macos-latest
+          #   target: x86_64-apple-darwin
+          #   platform: darwin-amd64
 
     steps:
       - uses: actions/checkout@v4
@@ -69,16 +69,6 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-
-      - name: Install cross-compilation toolchain (ARM64 Linux)
-        if: matrix.target == 'aarch64-unknown-linux-gnu'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu pkg-config perl libclang-dev
-
-          # Use vendored OpenSSL (compiles from source, no system deps needed)
-          echo "OPENSSL_STATIC=1" >> $GITHUB_ENV
-          echo "OPENSSL_VENDORED=1" >> $GITHUB_ENV
 
       - name: Cache Cargo dependencies
         uses: actions/cache@v4
@@ -200,4 +190,4 @@ jobs:
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "✅ Published to PyPI: https://pypi.org/project/percolate-rocks/${VERSION}/" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "**Platforms:** Linux (x86_64, ARM64), macOS (Intel, Apple Silicon)" >> $GITHUB_STEP_SUMMARY
+          echo "**Platforms:** Linux (x86_64), macOS (Apple Silicon)" >> $GITHUB_STEP_SUMMARY
