Fix PyPI upload to use maturin upload instead of publish
Version 0.2.4 - Fix macOS ARM64 wheel not being uploaded
- Change from maturin publish to maturin upload
- maturin publish rebuilds from source (Linux only on Linux runner)
- maturin upload uses pre-built wheels from artifacts
- Now both Linux and macOS ARM64 wheels will be uploaded

--- a/.github/workflows/build-rocks.yml
+++ b/.github/workflows/build-rocks.yml
@@ -190,8 +190,11 @@ jobs:
           mkdir -p target/wheels
           find ../wheels/ -name "*.whl" -exec cp {} target/wheels/ \;
 
-          # Publish with skip-existing in case of retries
-          maturin publish --skip-existing
+          echo "📦 Wheels to upload:"
+          ls -lh target/wheels/
+
+          # Upload pre-built wheels (use upload, not publish which rebuilds)
+          maturin upload --skip-existing target/wheels/*.whl
 
           echo "✅ Published to PyPI"
           echo "🔗 https://pypi.org/project/percolate-rocks/${VERSION}/"
