--- a/percolate-reading/Dockerfile
+++ b/percolate-reading/Dockerfile
@@ -1,4 +1,17 @@
 # =============================================================================
+# Percolate Reading Service
+# =============================================================================
+#
+# Multi-platform build command:
+#   docker buildx build --platform linux/amd64,linux/arm64 \
+#     -t percolate/percolate-reading:latest \
+#     -t percolate/percolate-reading:v0.3.2 \
+#     --push .
+#
+# Single platform build (local testing):
+#   docker build -t percolate/percolate-reading:latest .
+#
+# =============================================================================
 # Builder Stage - Install dependencies with build tools
 # =============================================================================
 FROM python:3.12-slim AS builder
