--- a/percolate/.env.example
+++ b/percolate/.env.example
@@ -9,10 +9,27 @@ PERCOLATE_OPENAI_API_KEY=your-openai-api-key-here
 PERCOLATE_API_HOST=0.0.0.0
 PERCOLATE_API_PORT=8000
 
-# OpenTelemetry (disabled by default)
-PERCOLATE_OTEL_ENABLED=false
-PERCOLATE_OTEL_ENDPOINT=http://localhost:4318
-PERCOLATE_OTEL_SERVICE_NAME=percolate
+# Project Name (used for OpenInference tracing in Phoenix)
+PERCOLATE_PROJECT_NAME=percolate
+
+# OpenTelemetry (disabled by default - enable on K8s cluster)
+# When enabled, traces flow: Agent -> OTEL Collector -> Phoenix
+OTEL__ENABLED=false
+
+# OTEL Service name (identifies this service in traces)
+OTEL__SERVICE_NAME=percolate-api
+
+# Phoenix endpoint for feedback annotations (NOT for traces)
+# Use port-forward in dev: kubectl port-forward svc/phoenix 6006:6006
+OTEL__PHOENIX_COLLECTOR_ENDPOINT=http://localhost:6006
+
+# Phoenix Cloud API key (optional, for cloud Phoenix instances)
+# OTEL__PHOENIX_API_KEY=your-phoenix-api-key-here
+
+# OTEL Collector endpoint (standard OTEL env var)
+# Production (K8s): http://otel-collector.default.svc.cluster.local:4317
+# Local testing: kubectl port-forward svc/otel-collector 4317:4317
+OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4317
 
 # Database
 PERCOLATE_DB_PATH=./data/percolate.db
