feat: kind topo tests

--- a/k8s/test-topology/kind-config.yaml
+++ b/k8s/test-topology/kind-config.yaml
@@ -13,7 +13,14 @@ nodes:
     hostPort: 9090
     protocol: TCP
 - role: worker
+  labels:
+    topology.kubernetes.io/zone: us-east-1a
 - role: worker
+  labels:
+    topology.kubernetes.io/zone: us-east-1b
+- role: worker
+  labels:
+    topology.kubernetes.io/zone: us-east-1c
 containerdConfigPatches:
 - |-
   [plugins."io.containerd.grpc.v1.cri".registry.mirrors."localhost:5001"]
